parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PRINCIPAL ID LLAVE_ABRE cuerpo LLAVE_CIERRA
Rule 2     cuerpo -> declaracion cuerpo2
Rule 3     cuerpo -> asig cuerpo2
Rule 4     cuerpo -> println cuerpo2
Rule 5     cuerpo -> para cuerpo2
Rule 6     cuerpo -> sif cuerpo2
Rule 7     cuerpo -> dhacer cuerpo2
Rule 8     cuerpo -> res cuerpo2
Rule 9     cuerpo -> empty
Rule 10    cuerpo2 -> cuerpo
Rule 11    cuerpo2 -> empty
Rule 12    declaracion -> tipod asig
Rule 13    tipod -> INTEGER
Rule 14    tipod -> DOUBLE
Rule 15    tipod -> STRING
Rule 16    println -> PRINTLN idnum TOKEN_ASIG
Rule 17    asig -> ID tipoasig masasig TOKEN_ASIG
Rule 18    tipoasig -> IGUAL idnum
Rule 19    tipoasig -> IGUAL COMILLA ID COMILLA
Rule 20    idnum -> num
Rule 21    idnum -> ID
Rule 22    num -> NUM_INTEGER
Rule 23    num -> NUM_DOUBLE
Rule 24    masasig -> COMA asig masasig
Rule 25    masasig -> oparit idnum masasig
Rule 26    masasig -> empty
Rule 27    para -> CIC_FOR PAREN_ABRE condicionpara PAREN_CIERRA LLAVE_ABRE cuerpo LLAVE_CIERRA
Rule 28    condicionpara -> inicio TOKEN_ASIG fin TOKEN_ASIG indec
Rule 29    inicio -> ID IGUAL idnum
Rule 30    fin -> ID oprel idnum
Rule 31    indec -> idnum MAS MAS
Rule 32    indec -> idnum MENOS MENOS
Rule 33    sif -> COND_IF PAREN_ABRE condicion PAREN_CIERRA COND_THEN LLAVE_ABRE cuerpo LLAVE_CIERRA
Rule 34    dhacer -> CIC_DO LLAVE_ABRE cuerpo LLAVE_CIERRA CIC_WHILE PAREN_ABRE condicion PAREN_CIERRA
Rule 35    res -> idnum oparit idnum
Rule 36    condicion -> ID oprel mascondicion
Rule 37    mascondicion -> idnum oprel mascondicion
Rule 38    mascondicion -> idnum
Rule 39    oparit -> MAS
Rule 40    oparit -> MENOS
Rule 41    oparit -> MULTI
Rule 42    oparit -> DIVI
Rule 43    oprel -> MNQ
Rule 44    oprel -> MYQ
Rule 45    oprel -> MNIQ
Rule 46    oprel -> MYIQ
Rule 47    oprel -> EQ
Rule 48    oprel -> DIST
Rule 49    empty -> <empty>

Terminals, with rules where they appear

CIC_DO               : 34
CIC_FOR              : 27
CIC_WHILE            : 34
COMA                 : 24
COMILLA              : 19 19
COND_IF              : 33
COND_THEN            : 33
DIST                 : 48
DIVI                 : 42
DOUBLE               : 14
EQ                   : 47
ID                   : 1 17 19 21 29 30 36
IGUAL                : 18 19 29
INTEGER              : 13
LLAVE_ABRE           : 1 27 33 34
LLAVE_CIERRA         : 1 27 33 34
MAS                  : 31 31 39
MENOS                : 32 32 40
MNIQ                 : 45
MNQ                  : 43
MULTI                : 41
MYIQ                 : 46
MYQ                  : 44
NUM_DOUBLE           : 23
NUM_INTEGER          : 22
PAREN_ABRE           : 27 33 34
PAREN_CIERRA         : 27 33 34
PRINCIPAL            : 1
PRINTLN              : 16
STRING               : 15
TOKEN_ASIG           : 16 17 28 28
error                : 

Nonterminals, with rules where they appear

asig                 : 3 12 24
condicion            : 33 34
condicionpara        : 27
cuerpo               : 1 10 27 33 34
cuerpo2              : 2 3 4 5 6 7 8
declaracion          : 2
dhacer               : 7
empty                : 9 11 26
fin                  : 28
idnum                : 16 18 25 29 30 31 32 35 35 37 38
indec                : 28
inicio               : 28
masasig              : 17 24 25
mascondicion         : 36 37
num                  : 20
oparit               : 25 35
oprel                : 30 36 37
para                 : 5
println              : 4
program              : 0
res                  : 8
sif                  : 6
tipoasig             : 17
tipod                : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PRINCIPAL ID LLAVE_ABRE cuerpo LLAVE_CIERRA

    PRINCIPAL       shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PRINCIPAL . ID LLAVE_ABRE cuerpo LLAVE_CIERRA

    ID              shift and go to state 3


state 3

    (1) program -> PRINCIPAL ID . LLAVE_ABRE cuerpo LLAVE_CIERRA

    LLAVE_ABRE      shift and go to state 4


state 4

    (1) program -> PRINCIPAL ID LLAVE_ABRE . cuerpo LLAVE_CIERRA
    (2) cuerpo -> . declaracion cuerpo2
    (3) cuerpo -> . asig cuerpo2
    (4) cuerpo -> . println cuerpo2
    (5) cuerpo -> . para cuerpo2
    (6) cuerpo -> . sif cuerpo2
    (7) cuerpo -> . dhacer cuerpo2
    (8) cuerpo -> . res cuerpo2
    (9) cuerpo -> . empty
    (12) declaracion -> . tipod asig
    (17) asig -> . ID tipoasig masasig TOKEN_ASIG
    (16) println -> . PRINTLN idnum TOKEN_ASIG
    (27) para -> . CIC_FOR PAREN_ABRE condicionpara PAREN_CIERRA LLAVE_ABRE cuerpo LLAVE_CIERRA
    (33) sif -> . COND_IF PAREN_ABRE condicion PAREN_CIERRA COND_THEN LLAVE_ABRE cuerpo LLAVE_CIERRA
    (34) dhacer -> . CIC_DO LLAVE_ABRE cuerpo LLAVE_CIERRA CIC_WHILE PAREN_ABRE condicion PAREN_CIERRA
    (35) res -> . idnum oparit idnum
    (49) empty -> .
    (13) tipod -> . INTEGER
    (14) tipod -> . DOUBLE
    (15) tipod -> . STRING
    (20) idnum -> . num
    (21) idnum -> . ID
    (22) num -> . NUM_INTEGER
    (23) num -> . NUM_DOUBLE

    ID              shift and go to state 21
    PRINTLN         shift and go to state 7
    CIC_FOR         shift and go to state 20
    COND_IF         shift and go to state 6
    CIC_DO          shift and go to state 19
    LLAVE_CIERRA    reduce using rule 49 (empty -> .)
    INTEGER         shift and go to state 14
    DOUBLE          shift and go to state 23
    STRING          shift and go to state 16
    NUM_INTEGER     shift and go to state 22
    NUM_DOUBLE      shift and go to state 8

    num                            shift and go to state 24
    para                           shift and go to state 17
    tipod                          shift and go to state 5
    asig                           shift and go to state 9
    res                            shift and go to state 10
    idnum                          shift and go to state 11
    dhacer                         shift and go to state 12
    cuerpo                         shift and go to state 18
    empty                          shift and go to state 15
    sif                            shift and go to state 13
    println                        shift and go to state 26
    declaracion                    shift and go to state 25

state 5

    (12) declaracion -> tipod . asig
    (17) asig -> . ID tipoasig masasig TOKEN_ASIG

    ID              shift and go to state 28

    asig                           shift and go to state 27

state 6

    (33) sif -> COND_IF . PAREN_ABRE condicion PAREN_CIERRA COND_THEN LLAVE_ABRE cuerpo LLAVE_CIERRA

    PAREN_ABRE      shift and go to state 29


state 7

    (16) println -> PRINTLN . idnum TOKEN_ASIG
    (20) idnum -> . num
    (21) idnum -> . ID
    (22) num -> . NUM_INTEGER
    (23) num -> . NUM_DOUBLE

    ID              shift and go to state 31
    NUM_INTEGER     shift and go to state 22
    NUM_DOUBLE      shift and go to state 8

    num                            shift and go to state 24
    idnum                          shift and go to state 30

state 8

    (23) num -> NUM_DOUBLE .

    TOKEN_ASIG      reduce using rule 23 (num -> NUM_DOUBLE .)
    ID              reduce using rule 23 (num -> NUM_DOUBLE .)
    PRINTLN         reduce using rule 23 (num -> NUM_DOUBLE .)
    CIC_FOR         reduce using rule 23 (num -> NUM_DOUBLE .)
    COND_IF         reduce using rule 23 (num -> NUM_DOUBLE .)
    CIC_DO          reduce using rule 23 (num -> NUM_DOUBLE .)
    INTEGER         reduce using rule 23 (num -> NUM_DOUBLE .)
    DOUBLE          reduce using rule 23 (num -> NUM_DOUBLE .)
    STRING          reduce using rule 23 (num -> NUM_DOUBLE .)
    NUM_INTEGER     reduce using rule 23 (num -> NUM_DOUBLE .)
    NUM_DOUBLE      reduce using rule 23 (num -> NUM_DOUBLE .)
    LLAVE_CIERRA    reduce using rule 23 (num -> NUM_DOUBLE .)
    MAS             reduce using rule 23 (num -> NUM_DOUBLE .)
    MENOS           reduce using rule 23 (num -> NUM_DOUBLE .)
    MULTI           reduce using rule 23 (num -> NUM_DOUBLE .)
    DIVI            reduce using rule 23 (num -> NUM_DOUBLE .)
    MNQ             reduce using rule 23 (num -> NUM_DOUBLE .)
    MYQ             reduce using rule 23 (num -> NUM_DOUBLE .)
    MNIQ            reduce using rule 23 (num -> NUM_DOUBLE .)
    MYIQ            reduce using rule 23 (num -> NUM_DOUBLE .)
    EQ              reduce using rule 23 (num -> NUM_DOUBLE .)
    DIST            reduce using rule 23 (num -> NUM_DOUBLE .)
    PAREN_CIERRA    reduce using rule 23 (num -> NUM_DOUBLE .)
    COMA            reduce using rule 23 (num -> NUM_DOUBLE .)


state 9

    (3) cuerpo -> asig . cuerpo2
    (10) cuerpo2 -> . cuerpo
    (11) cuerpo2 -> . empty
    (2) cuerpo -> . declaracion cuerpo2
    (3) cuerpo -> . asig cuerpo2
    (4) cuerpo -> . println cuerpo2
    (5) cuerpo -> . para cuerpo2
    (6) cuerpo -> . sif cuerpo2
    (7) cuerpo -> . dhacer cuerpo2
    (8) cuerpo -> . res cuerpo2
    (9) cuerpo -> . empty
    (49) empty -> .
    (12) declaracion -> . tipod asig
    (17) asig -> . ID tipoasig masasig TOKEN_ASIG
    (16) println -> . PRINTLN idnum TOKEN_ASIG
    (27) para -> . CIC_FOR PAREN_ABRE condicionpara PAREN_CIERRA LLAVE_ABRE cuerpo LLAVE_CIERRA
    (33) sif -> . COND_IF PAREN_ABRE condicion PAREN_CIERRA COND_THEN LLAVE_ABRE cuerpo LLAVE_CIERRA
    (34) dhacer -> . CIC_DO LLAVE_ABRE cuerpo LLAVE_CIERRA CIC_WHILE PAREN_ABRE condicion PAREN_CIERRA
    (35) res -> . idnum oparit idnum
    (13) tipod -> . INTEGER
    (14) tipod -> . DOUBLE
    (15) tipod -> . STRING
    (20) idnum -> . num
    (21) idnum -> . ID
    (22) num -> . NUM_INTEGER
    (23) num -> . NUM_DOUBLE

    LLAVE_CIERRA    reduce using rule 49 (empty -> .)
    ID              shift and go to state 21
    PRINTLN         shift and go to state 7
    CIC_FOR         shift and go to state 20
    COND_IF         shift and go to state 6
    CIC_DO          shift and go to state 19
    INTEGER         shift and go to state 14
    DOUBLE          shift and go to state 23
    STRING          shift and go to state 16
    NUM_INTEGER     shift and go to state 22
    NUM_DOUBLE      shift and go to state 8

    num                            shift and go to state 24
    para                           shift and go to state 17
    tipod                          shift and go to state 5
    asig                           shift and go to state 9
    res                            shift and go to state 10
    idnum                          shift and go to state 11
    dhacer                         shift and go to state 12
    cuerpo                         shift and go to state 34
    empty                          shift and go to state 33
    cuerpo2                        shift and go to state 32
    println                        shift and go to state 26
    declaracion                    shift and go to state 25
    sif                            shift and go to state 13

state 10

    (8) cuerpo -> res . cuerpo2
    (10) cuerpo2 -> . cuerpo
    (11) cuerpo2 -> . empty
    (2) cuerpo -> . declaracion cuerpo2
    (3) cuerpo -> . asig cuerpo2
    (4) cuerpo -> . println cuerpo2
    (5) cuerpo -> . para cuerpo2
    (6) cuerpo -> . sif cuerpo2
    (7) cuerpo -> . dhacer cuerpo2
    (8) cuerpo -> . res cuerpo2
    (9) cuerpo -> . empty
    (49) empty -> .
    (12) declaracion -> . tipod asig
    (17) asig -> . ID tipoasig masasig TOKEN_ASIG
    (16) println -> . PRINTLN idnum TOKEN_ASIG
    (27) para -> . CIC_FOR PAREN_ABRE condicionpara PAREN_CIERRA LLAVE_ABRE cuerpo LLAVE_CIERRA
    (33) sif -> . COND_IF PAREN_ABRE condicion PAREN_CIERRA COND_THEN LLAVE_ABRE cuerpo LLAVE_CIERRA
    (34) dhacer -> . CIC_DO LLAVE_ABRE cuerpo LLAVE_CIERRA CIC_WHILE PAREN_ABRE condicion PAREN_CIERRA
    (35) res -> . idnum oparit idnum
    (13) tipod -> . INTEGER
    (14) tipod -> . DOUBLE
    (15) tipod -> . STRING
    (20) idnum -> . num
    (21) idnum -> . ID
    (22) num -> . NUM_INTEGER
    (23) num -> . NUM_DOUBLE

    LLAVE_CIERRA    reduce using rule 49 (empty -> .)
    ID              shift and go to state 21
    PRINTLN         shift and go to state 7
    CIC_FOR         shift and go to state 20
    COND_IF         shift and go to state 6
    CIC_DO          shift and go to state 19
    INTEGER         shift and go to state 14
    DOUBLE          shift and go to state 23
    STRING          shift and go to state 16
    NUM_INTEGER     shift and go to state 22
    NUM_DOUBLE      shift and go to state 8

    num                            shift and go to state 24
    para                           shift and go to state 17
    tipod                          shift and go to state 5
    asig                           shift and go to state 9
    res                            shift and go to state 10
    idnum                          shift and go to state 11
    dhacer                         shift and go to state 12
    cuerpo                         shift and go to state 34
    empty                          shift and go to state 33
    cuerpo2                        shift and go to state 35
    println                        shift and go to state 26
    declaracion                    shift and go to state 25
    sif                            shift and go to state 13

state 11

    (35) res -> idnum . oparit idnum
    (39) oparit -> . MAS
    (40) oparit -> . MENOS
    (41) oparit -> . MULTI
    (42) oparit -> . DIVI

    MAS             shift and go to state 36
    MENOS           shift and go to state 39
    MULTI           shift and go to state 38
    DIVI            shift and go to state 37

    oparit                         shift and go to state 40

state 12

    (7) cuerpo -> dhacer . cuerpo2
    (10) cuerpo2 -> . cuerpo
    (11) cuerpo2 -> . empty
    (2) cuerpo -> . declaracion cuerpo2
    (3) cuerpo -> . asig cuerpo2
    (4) cuerpo -> . println cuerpo2
    (5) cuerpo -> . para cuerpo2
    (6) cuerpo -> . sif cuerpo2
    (7) cuerpo -> . dhacer cuerpo2
    (8) cuerpo -> . res cuerpo2
    (9) cuerpo -> . empty
    (49) empty -> .
    (12) declaracion -> . tipod asig
    (17) asig -> . ID tipoasig masasig TOKEN_ASIG
    (16) println -> . PRINTLN idnum TOKEN_ASIG
    (27) para -> . CIC_FOR PAREN_ABRE condicionpara PAREN_CIERRA LLAVE_ABRE cuerpo LLAVE_CIERRA
    (33) sif -> . COND_IF PAREN_ABRE condicion PAREN_CIERRA COND_THEN LLAVE_ABRE cuerpo LLAVE_CIERRA
    (34) dhacer -> . CIC_DO LLAVE_ABRE cuerpo LLAVE_CIERRA CIC_WHILE PAREN_ABRE condicion PAREN_CIERRA
    (35) res -> . idnum oparit idnum
    (13) tipod -> . INTEGER
    (14) tipod -> . DOUBLE
    (15) tipod -> . STRING
    (20) idnum -> . num
    (21) idnum -> . ID
    (22) num -> . NUM_INTEGER
    (23) num -> . NUM_DOUBLE

    LLAVE_CIERRA    reduce using rule 49 (empty -> .)
    ID              shift and go to state 21
    PRINTLN         shift and go to state 7
    CIC_FOR         shift and go to state 20
    COND_IF         shift and go to state 6
    CIC_DO          shift and go to state 19
    INTEGER         shift and go to state 14
    DOUBLE          shift and go to state 23
    STRING          shift and go to state 16
    NUM_INTEGER     shift and go to state 22
    NUM_DOUBLE      shift and go to state 8

    num                            shift and go to state 24
    para                           shift and go to state 17
    tipod                          shift and go to state 5
    asig                           shift and go to state 9
    res                            shift and go to state 10
    idnum                          shift and go to state 11
    dhacer                         shift and go to state 12
    cuerpo                         shift and go to state 34
    empty                          shift and go to state 33
    cuerpo2                        shift and go to state 41
    println                        shift and go to state 26
    declaracion                    shift and go to state 25
    sif                            shift and go to state 13

state 13

    (6) cuerpo -> sif . cuerpo2
    (10) cuerpo2 -> . cuerpo
    (11) cuerpo2 -> . empty
    (2) cuerpo -> . declaracion cuerpo2
    (3) cuerpo -> . asig cuerpo2
    (4) cuerpo -> . println cuerpo2
    (5) cuerpo -> . para cuerpo2
    (6) cuerpo -> . sif cuerpo2
    (7) cuerpo -> . dhacer cuerpo2
    (8) cuerpo -> . res cuerpo2
    (9) cuerpo -> . empty
    (49) empty -> .
    (12) declaracion -> . tipod asig
    (17) asig -> . ID tipoasig masasig TOKEN_ASIG
    (16) println -> . PRINTLN idnum TOKEN_ASIG
    (27) para -> . CIC_FOR PAREN_ABRE condicionpara PAREN_CIERRA LLAVE_ABRE cuerpo LLAVE_CIERRA
    (33) sif -> . COND_IF PAREN_ABRE condicion PAREN_CIERRA COND_THEN LLAVE_ABRE cuerpo LLAVE_CIERRA
    (34) dhacer -> . CIC_DO LLAVE_ABRE cuerpo LLAVE_CIERRA CIC_WHILE PAREN_ABRE condicion PAREN_CIERRA
    (35) res -> . idnum oparit idnum
    (13) tipod -> . INTEGER
    (14) tipod -> . DOUBLE
    (15) tipod -> . STRING
    (20) idnum -> . num
    (21) idnum -> . ID
    (22) num -> . NUM_INTEGER
    (23) num -> . NUM_DOUBLE

    LLAVE_CIERRA    reduce using rule 49 (empty -> .)
    ID              shift and go to state 21
    PRINTLN         shift and go to state 7
    CIC_FOR         shift and go to state 20
    COND_IF         shift and go to state 6
    CIC_DO          shift and go to state 19
    INTEGER         shift and go to state 14
    DOUBLE          shift and go to state 23
    STRING          shift and go to state 16
    NUM_INTEGER     shift and go to state 22
    NUM_DOUBLE      shift and go to state 8

    num                            shift and go to state 24
    para                           shift and go to state 17
    tipod                          shift and go to state 5
    asig                           shift and go to state 9
    res                            shift and go to state 10
    idnum                          shift and go to state 11
    dhacer                         shift and go to state 12
    cuerpo                         shift and go to state 34
    empty                          shift and go to state 33
    sif                            shift and go to state 13
    cuerpo2                        shift and go to state 42
    println                        shift and go to state 26
    declaracion                    shift and go to state 25

state 14

    (13) tipod -> INTEGER .

    ID              reduce using rule 13 (tipod -> INTEGER .)


state 15

    (9) cuerpo -> empty .

    LLAVE_CIERRA    reduce using rule 9 (cuerpo -> empty .)


state 16

    (15) tipod -> STRING .

    ID              reduce using rule 15 (tipod -> STRING .)


state 17

    (5) cuerpo -> para . cuerpo2
    (10) cuerpo2 -> . cuerpo
    (11) cuerpo2 -> . empty
    (2) cuerpo -> . declaracion cuerpo2
    (3) cuerpo -> . asig cuerpo2
    (4) cuerpo -> . println cuerpo2
    (5) cuerpo -> . para cuerpo2
    (6) cuerpo -> . sif cuerpo2
    (7) cuerpo -> . dhacer cuerpo2
    (8) cuerpo -> . res cuerpo2
    (9) cuerpo -> . empty
    (49) empty -> .
    (12) declaracion -> . tipod asig
    (17) asig -> . ID tipoasig masasig TOKEN_ASIG
    (16) println -> . PRINTLN idnum TOKEN_ASIG
    (27) para -> . CIC_FOR PAREN_ABRE condicionpara PAREN_CIERRA LLAVE_ABRE cuerpo LLAVE_CIERRA
    (33) sif -> . COND_IF PAREN_ABRE condicion PAREN_CIERRA COND_THEN LLAVE_ABRE cuerpo LLAVE_CIERRA
    (34) dhacer -> . CIC_DO LLAVE_ABRE cuerpo LLAVE_CIERRA CIC_WHILE PAREN_ABRE condicion PAREN_CIERRA
    (35) res -> . idnum oparit idnum
    (13) tipod -> . INTEGER
    (14) tipod -> . DOUBLE
    (15) tipod -> . STRING
    (20) idnum -> . num
    (21) idnum -> . ID
    (22) num -> . NUM_INTEGER
    (23) num -> . NUM_DOUBLE

    LLAVE_CIERRA    reduce using rule 49 (empty -> .)
    ID              shift and go to state 21
    PRINTLN         shift and go to state 7
    CIC_FOR         shift and go to state 20
    COND_IF         shift and go to state 6
    CIC_DO          shift and go to state 19
    INTEGER         shift and go to state 14
    DOUBLE          shift and go to state 23
    STRING          shift and go to state 16
    NUM_INTEGER     shift and go to state 22
    NUM_DOUBLE      shift and go to state 8

    num                            shift and go to state 24
    para                           shift and go to state 17
    tipod                          shift and go to state 5
    asig                           shift and go to state 9
    res                            shift and go to state 10
    idnum                          shift and go to state 11
    dhacer                         shift and go to state 12
    cuerpo                         shift and go to state 34
    empty                          shift and go to state 33
    cuerpo2                        shift and go to state 43
    println                        shift and go to state 26
    declaracion                    shift and go to state 25
    sif                            shift and go to state 13

state 18

    (1) program -> PRINCIPAL ID LLAVE_ABRE cuerpo . LLAVE_CIERRA

    LLAVE_CIERRA    shift and go to state 44


state 19

    (34) dhacer -> CIC_DO . LLAVE_ABRE cuerpo LLAVE_CIERRA CIC_WHILE PAREN_ABRE condicion PAREN_CIERRA

    LLAVE_ABRE      shift and go to state 45


state 20

    (27) para -> CIC_FOR . PAREN_ABRE condicionpara PAREN_CIERRA LLAVE_ABRE cuerpo LLAVE_CIERRA

    PAREN_ABRE      shift and go to state 46


state 21

    (17) asig -> ID . tipoasig masasig TOKEN_ASIG
    (21) idnum -> ID .
    (18) tipoasig -> . IGUAL idnum
    (19) tipoasig -> . IGUAL COMILLA ID COMILLA

    MAS             reduce using rule 21 (idnum -> ID .)
    MENOS           reduce using rule 21 (idnum -> ID .)
    MULTI           reduce using rule 21 (idnum -> ID .)
    DIVI            reduce using rule 21 (idnum -> ID .)
    IGUAL           shift and go to state 47

    tipoasig                       shift and go to state 48

state 22

    (22) num -> NUM_INTEGER .

    TOKEN_ASIG      reduce using rule 22 (num -> NUM_INTEGER .)
    ID              reduce using rule 22 (num -> NUM_INTEGER .)
    PRINTLN         reduce using rule 22 (num -> NUM_INTEGER .)
    CIC_FOR         reduce using rule 22 (num -> NUM_INTEGER .)
    COND_IF         reduce using rule 22 (num -> NUM_INTEGER .)
    CIC_DO          reduce using rule 22 (num -> NUM_INTEGER .)
    INTEGER         reduce using rule 22 (num -> NUM_INTEGER .)
    DOUBLE          reduce using rule 22 (num -> NUM_INTEGER .)
    STRING          reduce using rule 22 (num -> NUM_INTEGER .)
    NUM_INTEGER     reduce using rule 22 (num -> NUM_INTEGER .)
    NUM_DOUBLE      reduce using rule 22 (num -> NUM_INTEGER .)
    LLAVE_CIERRA    reduce using rule 22 (num -> NUM_INTEGER .)
    MAS             reduce using rule 22 (num -> NUM_INTEGER .)
    MENOS           reduce using rule 22 (num -> NUM_INTEGER .)
    MULTI           reduce using rule 22 (num -> NUM_INTEGER .)
    DIVI            reduce using rule 22 (num -> NUM_INTEGER .)
    MNQ             reduce using rule 22 (num -> NUM_INTEGER .)
    MYQ             reduce using rule 22 (num -> NUM_INTEGER .)
    MNIQ            reduce using rule 22 (num -> NUM_INTEGER .)
    MYIQ            reduce using rule 22 (num -> NUM_INTEGER .)
    EQ              reduce using rule 22 (num -> NUM_INTEGER .)
    DIST            reduce using rule 22 (num -> NUM_INTEGER .)
    PAREN_CIERRA    reduce using rule 22 (num -> NUM_INTEGER .)
    COMA            reduce using rule 22 (num -> NUM_INTEGER .)


state 23

    (14) tipod -> DOUBLE .

    ID              reduce using rule 14 (tipod -> DOUBLE .)


state 24

    (20) idnum -> num .

    MAS             reduce using rule 20 (idnum -> num .)
    MENOS           reduce using rule 20 (idnum -> num .)
    MULTI           reduce using rule 20 (idnum -> num .)
    DIVI            reduce using rule 20 (idnum -> num .)
    MNQ             reduce using rule 20 (idnum -> num .)
    MYQ             reduce using rule 20 (idnum -> num .)
    MNIQ            reduce using rule 20 (idnum -> num .)
    MYIQ            reduce using rule 20 (idnum -> num .)
    EQ              reduce using rule 20 (idnum -> num .)
    DIST            reduce using rule 20 (idnum -> num .)
    PAREN_CIERRA    reduce using rule 20 (idnum -> num .)
    TOKEN_ASIG      reduce using rule 20 (idnum -> num .)
    COMA            reduce using rule 20 (idnum -> num .)
    ID              reduce using rule 20 (idnum -> num .)
    PRINTLN         reduce using rule 20 (idnum -> num .)
    CIC_FOR         reduce using rule 20 (idnum -> num .)
    COND_IF         reduce using rule 20 (idnum -> num .)
    CIC_DO          reduce using rule 20 (idnum -> num .)
    INTEGER         reduce using rule 20 (idnum -> num .)
    DOUBLE          reduce using rule 20 (idnum -> num .)
    STRING          reduce using rule 20 (idnum -> num .)
    NUM_INTEGER     reduce using rule 20 (idnum -> num .)
    NUM_DOUBLE      reduce using rule 20 (idnum -> num .)
    LLAVE_CIERRA    reduce using rule 20 (idnum -> num .)


state 25

    (2) cuerpo -> declaracion . cuerpo2
    (10) cuerpo2 -> . cuerpo
    (11) cuerpo2 -> . empty
    (2) cuerpo -> . declaracion cuerpo2
    (3) cuerpo -> . asig cuerpo2
    (4) cuerpo -> . println cuerpo2
    (5) cuerpo -> . para cuerpo2
    (6) cuerpo -> . sif cuerpo2
    (7) cuerpo -> . dhacer cuerpo2
    (8) cuerpo -> . res cuerpo2
    (9) cuerpo -> . empty
    (49) empty -> .
    (12) declaracion -> . tipod asig
    (17) asig -> . ID tipoasig masasig TOKEN_ASIG
    (16) println -> . PRINTLN idnum TOKEN_ASIG
    (27) para -> . CIC_FOR PAREN_ABRE condicionpara PAREN_CIERRA LLAVE_ABRE cuerpo LLAVE_CIERRA
    (33) sif -> . COND_IF PAREN_ABRE condicion PAREN_CIERRA COND_THEN LLAVE_ABRE cuerpo LLAVE_CIERRA
    (34) dhacer -> . CIC_DO LLAVE_ABRE cuerpo LLAVE_CIERRA CIC_WHILE PAREN_ABRE condicion PAREN_CIERRA
    (35) res -> . idnum oparit idnum
    (13) tipod -> . INTEGER
    (14) tipod -> . DOUBLE
    (15) tipod -> . STRING
    (20) idnum -> . num
    (21) idnum -> . ID
    (22) num -> . NUM_INTEGER
    (23) num -> . NUM_DOUBLE

    LLAVE_CIERRA    reduce using rule 49 (empty -> .)
    ID              shift and go to state 21
    PRINTLN         shift and go to state 7
